--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,9 @@ li{
     overflow: scroll;
     margin-top: 12px;
 }
+.box:hover{
+  box-shadow: 0px 0px 10px #d5d5d5;
+}
 .tw:hover{
   height: 200px;
 }
