--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ li{
     padding: 16px;
     overflow: scroll;
     margin-top: 12px;
+    text-align: left;
 }
 .box:hover{
   box-shadow: 0px 0px 10px #d5d5d5;
