--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    padding: 20px;
+    padding: 1em;
     background-color: #070707;
     color: #d5d5d5;
     font-family: Inter, sans-serif;
