--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,12 @@ h1{
   font-family: Inter, sans-serif;
 }
 h3{
-    font-family: Poppins,monospace;
+    font-family: Poppins;
     font-size: 28px;
 
 }
 h2{
-    font-family: Poppins,monospace;
+    font-family: Poppins;
     font-size: 32px;
     font-style: bold;
     color: #d5d5ff;
