--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 body{
     padding: 1em;
-    background-color: #282828;
+    background-color: #1d1d1d;
     color: #d5d5d5;
     font-family: Lexend, sans-serif;
 }
