--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ div{
 .main{
     border: #d5d5d5 1px solid;
     border-radius: 4px;
-    width: 50%;
+    width: 12vmin;
     padding: 12px;
     margin-top: 24px;
     margin-left: auto;
