--- a/styles.css
+++ b/styles.css
@@ -58,10 +58,15 @@ div{
 #fi{
 	float: left;
 }
+@media (min-width: 320px) and (max-width: 767px) {
+	.main{
+		width: 340px;
+	}
+}
 .main{
     border: #d5d5d5 1px solid;
     border-radius: 4px;
-    width: 360px;
+    width: 45%;
     padding: 12px;
     margin-top: 24px;
     margin-left: auto;
