--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,15 @@ div{
 		width: 340px;
 	}
 }
+@media (min-width: 768px)
+{
+	.main{
+		width: 80%;
+	}
+}
 .main{
     border: #d5d5d5 1px solid;
     border-radius: 4px;
-    width: 45%;
     padding: 12px;
     margin-top: 24px;
     margin-left: auto;
