--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,8 @@ a:hover{
 }
 li{
     margin-top: 12px;
-    margin-left: -20px;
+    margin-left: auto;
+    margin-right: auto;
     text-align: left;
 }
 div{
