--- a/styles.css
+++ b/styles.css
@@ -60,11 +60,17 @@ div{
 	.main{
 		width: 340px;
 	}
+	li{
+		margin-left: 20px;
+	}
 }
 @media (min-width: 768px)
 {
 	.main{
 		width: 80%;
+	}
+	li{
+		margin-left: 40vh;
 	}
 }
 .main{
