--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ div{
 	}
 	li{
 		margin-left: -20px;
+text-align: left;
 	}
 }
 @media (min-width: 768px)
@@ -71,7 +72,7 @@ div{
 		width: 80%;
 	}
 	li{
-		margin-left: 20%;
+		text-align: center;
 	}
 }
 .main{
