--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,8 @@ color: #fff;
 	box-shadow: 0px 0px 1em #fd1d1d;
 }
 #sptfy{
-	linear-gradient(to bottom, #21ff6f, #008210)
+	background: linear-gradient(to bottom, #21ff6f, #008210);
+	color: #fff;
 }
 #sptfy:hover{
 	box-shadow: 0px 0px 1em #21ff6f;
