--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,7 @@ background: linear-gradient(135deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%
 color: #fff;
 }
 #ig:hover{
+	background: linear-gradient(135deg, rgba(131,58,180,1) 100%, rgba(253,29,29,1) 0%, rgba(252,176,69,1) 50%);
 	box-shadow: 0px 0px 1em #fd1d1d;
 }
 #sptfy{
