--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ color: #fff;
 }
 #sptfy{
 	background: linear-gradient(to bottom, #21ff6f, #008210);
-	color: #fff;
+	color: #000;
 }
 #sptfy:hover{
 	box-shadow: 0px 0px 1em #21ff6f;
