--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
 }
 h1{
   font-family: Lexend, sans-serif;
-  text-align: center;
+  text-align: inherit;
   font-size: 1.25em;
 }
 h3{
@@ -54,9 +54,6 @@ li{
 div{
 	overflow-wrap: anywhere;
 }
-#fi{
-	float: left;
-}
 @media (min-width: 320px) and (max-width: 767px) {
 	.main{
 		width: 340px;
@@ -64,6 +61,9 @@ div{
 	li{
 		margin-left: -20px;
 text-align: left;
+	}
+	.nav{
+		width: 340px;
 	}
 }
 @media (min-width: 768px)
@@ -73,6 +73,13 @@ text-align: left;
 	}
 	li{
 		text-align: center;
+	}
+	.nav{
+		width: 80%;
+	}
+	#apt{
+		text-align: left;
+		padding: 48px;
 	}
 }
 .main{
@@ -143,4 +150,18 @@ color: #fff;
 }
 .nav{
 	display: flex;
+	background-color: #0c0c0c;
+	border-radius: 4px;
+	height: 3em;
+	justify-content: space-around;
+	flex-direction: row;
+	margin: auto;
+	padding: 12px;
+}
+.abt{
+	display: flex;
+	text-align: left;
+}
+#apt{
+	padding: 24px;
 }
