--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,6 @@ h2{
     border-radius: 10px;
     padding: 20px;
 }
-footer{
-    margin-top: 100px;
-    text-align: center;
-}
 a{
 	color: #fff;
 	text-decoration-line: none;
@@ -46,6 +42,7 @@ a{
 a:hover{
 	color: #d599d5;
 	text-decoration-line: solid;
+	box-shadow: 0px 2px 0px #d599d5;
 }
 .col{
 	color: #d599d5;
@@ -59,7 +56,7 @@ div{
 }
 @media (min-width: 320px) and (max-width: 767px) {
 	.main{
-		width: 340px;
+		width: 80%;
 		text-align: center;
 	}
 	li{
@@ -67,7 +64,10 @@ div{
 		text-align: left;
 	}
 	.nav{
-		width: 340px;
+		width: 80%
+	}
+	.socmed{
+		width: 140px;
 	}
 }
 @media (min-width: 768px)
@@ -81,6 +81,12 @@ div{
 	#apt{
 		text-align: left;
 		padding: 48px;
+	}
+	.socmed{
+		width: 250px;
+	}
+	#intro{
+		float: right;
 	}
 }
 .main{
@@ -101,9 +107,8 @@ div{
 	justify-content: space-evenly;
 }
 .socmed{
-		border: #d5d5d5 1px solid;
+	border: #d5d5d5 1px solid;
     border-radius: 16px;
-    width: 142px;
     height: 6em;
     padding: 2px;
     padding-top: 30px;
@@ -159,13 +164,11 @@ color: #fff;
 	margin: auto;
 	padding: 12px;
 	font-size: 1em;
+	transition: .2s;
 }
 .abt{
 	text-align: left;
 }
 .slay{
 	font-size: 1.25em;
-}
-.slay:hover{
-	letter-spacing: 2px;
 }
