--- a/style.css
+++ b/style.css
@@ -79,6 +79,22 @@ footer > p{
 .imglink{
 	display: none;
 }
+.tagholder{
+	display: flex;
+	flex-wrap: wrap;
+}
+.tag{
+	background-color: #181825;
+	border: 2px dotted #cba6f7;
+	border-radius: 16px;
+	font-size: .5em;
+	text-align: center;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+.tagholder > .tag{
+	margin-right: 1em;
+}
 a{
 	color: #cdd6f4;
 	transition: .075s;
