--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@ footer > p{
     margin-top: 2vh;
     overflow-wrap: break-word;
     width: 70vw;
-    border: 2px solid #cba6f7;
     border-radius: 16px;
     padding: 24px;
+    transition: .075s;
 }
 @media (min-width:320px) and (max-width:767px) {
     .ui{
@@ -126,7 +126,7 @@ a:hover .socialicon{
 	opacity: 100%;
 }
 a:hover .ui{
-	box-shadow: 0px 0px 8px #cba6f7;
+	box-shadow: -4px 0px 0px #cba6f7;
 }
 #socials{
     display: flex;
