--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ header {
 	display: flex;
 	justify-content: space-evenly;
 	padding: 2vh;
-	position: sticky;
+	position: fixed;
 }
 body {
 	background-color: #181825;
@@ -29,7 +29,7 @@ iframe {
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
-	
+
 }
 .ui {
 	background-color: #1e1e2e;
