--- a/style.css
+++ b/style.css
@@ -25,8 +25,7 @@ footer > p {
 code {
 	font-family: 'Lexend Deca', sans-serif;
 }
-iframe {
-	outline: none;
+object {
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
