--- a/css/index.css
+++ b/css/index.css
@@ -7,16 +7,16 @@
 
 /* Theme colors */
 :root {
-	--color-gray-20: #e0e0e0;
-	--color-gray-50: #C0C0C0;
-	--color-gray-90: #333;
+	--color-gray-20: #416;
+	--color-gray-50: #faf;
+	--color-gray-90: #fcf;
 
-	--background-color: #fff;
+	--background-color: #416;
 
 	--text-color: var(--color-gray-90);
-	--text-color-link: #082840;
-	--text-color-link-active: #5f2b48;
-	--text-color-link-visited: #17050F;
+	--text-color-link: #aaf;
+	--text-color-link-active: #ed96c6;
+	--text-color-link-visited: #fff;
 
 	--syntax-tab-size: 2;
 }
