--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,14 +9,14 @@
 :root {
 	--color-gray-20: #181825;
 	--color-gray-50: #cdd6f4;
-	--color-gray-90: #cba6f7;
+	--color-gray-90: #fff;
 
 	--background-color: #11111b;
 
 	--text-color: var(--color-gray-90);
 	--text-color-link: #cba6f7;
 	--text-color-link-active: #cba6f7;
-	--text-color-link-visited: #57436f;
+	--text-color-link-visited: #e4cfff;
 
 	--syntax-tab-size: 2;
 }
