--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 /* Defaults */
 :root {
-	--font-family: "Inter", sans-serif;
+	--font-family: "Inter";
 	--font-family-monospace: "JetBrains Mono", monospace;
 }
 
