--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
+
 /* Defaults */
 :root {
-	--font-family: "Inter";
+	--font-family: "Inter", sans-serif;
 	--font-family-monospace: "JetBrains Mono", monospace;
 }
 
