--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
+@font-face {
+	font-family: "Inter";
+	src: url("Inter.ttf") format("truetype");
+}
+@font-face {
+	font-family: "JetBrains Mono";
+	src: url("JetBrainsMono.ttf") format("truetype");
+}
+  
 
 /* Defaults */
 :root {
