--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: "Inter";
-	src: url("./Inter.ttf") format("truetype");
+	src: url("/css/Inter.ttf") format("truetype");
 }
 @font-face {
 	font-family: "JetBrains Mono";
-	src: url("./JetBrainsMono.ttf") format("truetype");
+	src: url("/css/JetBrainsMono.ttf") format("truetype");
 }
   
 
