--- a/content/index.njk
+++ b/content/index.njk
@@ -4,7 +4,8 @@ eleventyNavigation:
   order: 1
 numberOfLatestPostsToShow: 3
 ---
-test test 12 3
+<h1>Hi, I'm Junie</h1>
+<h2>:3(placeholder for now)</h2>
 <p>Use the links on the header to navigate, click my username to go back to the main index</p>
 
 {% set postsCount = collections.posts | length %}
