--- a/content/index.njk
+++ b/content/index.njk
@@ -1,12 +1,13 @@
 ---
 layout: layouts/home.njk
 eleventyNavigation:
+	key: home
   order: 1
 numberOfLatestPostsToShow: 3
 ---
 <h1>Hi, I'm Junie</h1>
 <h2>:3(placeholder for now)</h2>
-<p>Use the links on the header to navigate, click my username to go back to the main index</p>
+<p>Use the links on the header to navigate my website.</p>
 
 {% set postsCount = collections.posts | length %}
 {% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
