--- a/content/blog.njk
+++ b/content/blog.njk
@@ -1,10 +1,10 @@
 ---
 layout: layouts/home.njk
 eleventyNavigation:
-  key: Blog
+  key: blog
   order: 3
 ---
-<h1>Blog</h1>
+<h1>Blog Posts</h1>
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
