--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -37,9 +37,9 @@
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
 		<header>
-			<!--a href="/" class="home-link"-->{{ metadata.title }}<!--/a-->
+			<!--a href="/" class="home-link"--><!--/a-->
 
-			<p>{{ metadata.title }}</p>
+			<p class="home-link">{{ metadata.title }}</p>
 
 			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
 			<nav>
