--- a/content/index.njk
+++ b/content/index.njk
@@ -6,7 +6,8 @@ eleventyNavigation:
 numberOfLatestPostsToShow: 3
 ---
 <h1>Hi, I'm Junie</h1>
-<h2>:3(placeholder for now)</h2>
+<h2>Your technophobe ThinkPad girl</h2>
+<img src="{% getBundle "img" %}/dinner.png">
 <p>Use the links on the header to navigate my website.</p>
 
 {% set postsCount = collections.posts | length %}
