--- a/content/index.njk
+++ b/content/index.njk
@@ -7,7 +7,7 @@ numberOfLatestPostsToShow: 3
 ---
 <h1>Hi, I'm Junie</h1>
 <h2>Your technophobe ThinkPad girl</h2>
-<img src="{% getBundle "img" %}/dinner.png">
+<img src="../img/dinner.png">
 <p>Use the links on the header to navigate my website.</p>
 
 {% set postsCount = collections.posts | length %}
