--- a/content/index.njk
+++ b/content/index.njk
@@ -5,9 +5,12 @@ eleventyNavigation:
   order: 1
 numberOfLatestPostsToShow: 3
 ---
-<h1>Hi, I'm Junie</h1>
-<h2>Your technophobe ThinkPad girl</h2>
-<img src="../img/dinner.png">
+<div class="wa" style="display: grid;">
+	<img src="../img/lunch.png">
+	<h1>Hi, I'm Junie</h1>
+	<h2>Your technophobe ThinkPad girl</h2>
+</div>
+
 <p>Use the links on the header to navigate my website.</p>
 
 {% set postsCount = collections.posts | length %}
