--- a/content/index.njk
+++ b/content/index.njk
@@ -5,8 +5,10 @@ eleventyNavigation:
   order: 1
 numberOfLatestPostsToShow: 3
 ---
-<div class="wa" style="display: grid;">
-	<img src="../img/lunch.png">
+<div class="wa" style="
+	display: flex;
+	">
+	<img src="../img/lunch.png" width="84" height="188">
 	<h1>Hi, I'm Junie</h1>
 	<h2>Your technophobe ThinkPad girl</h2>
 </div>
