--- a/content/index.njk
+++ b/content/index.njk
@@ -9,8 +9,7 @@ numberOfLatestPostsToShow: 3
 	display: flex;
 	">
 	<img src="../img/lunch.png" width="84" height="188">
-	<h1>Hi, I'm Junie</h1>
-	<h2>Your technophobe ThinkPad girl</h2>
+	<h1>Hi, I'm Junie<h2>Your technophobe ThinkPad girl</h2></h1>
 </div>
 
 <p>Use the links on the header to navigate my website.</p>
