a feew styling changes

--- a/content/index.njk
+++ b/content/index.njk
@@ -9,7 +9,12 @@ numberOfLatestPostsToShow: 3
 	display: flex;
 	">
 	<img src="../img/lunch.png" width="84" height="188">
-	<h1>Hi, I'm Junie<h2>Your technophobe ThinkPad girl</h2></h1>
+	<div style="
+		display: inline;
+		margin-left: 12px">
+		<h1>Hi, I'm Junie</h1>
+		<h2>Your technophobe ThinkPad girl</h2>
+	</div>
 </div>
 
 <p>Use the links on the header to navigate my website.</p>
