--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -42,6 +42,7 @@
 			<p class="home-link">{{ metadata.title }}</p>
 
 			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
+
 			<nav>
 				<h2 class="visually-hidden">Top level navigation menu</h2>
 				<ul class="nav">
@@ -56,7 +57,7 @@
 			{{ content | safe }}
 		</main>
 
-		<footer></footer>
+		<footer><p>This site is made with 💖 under the <a href="https://unlicense.org/">Unlicense</a> license.</p></footer>
 
 		<!-- This page `{{ page.url | htmlBaseUrl }}` was built on {% currentBuildDate %} -->
 	</body>
