--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,6 +6,8 @@
 		<title>{{ title or metadata.title }}</title>
 		<meta name="description" content="{{ description or metadata.description }}">
 
+		<link rel="icon" href="/favicon.ico" sizes="any">
+
 		{#- Atom and JSON feeds included by default #}
 		<link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
 		<link rel="alternate" href="/feed/feed.json" type="application/json" title="{{ metadata.title }}">
