--- a/css/index.css
+++ b/css/index.css
@@ -137,6 +137,10 @@ header:after {
 
 footer {
 	border-top: 1px dashed var(--color-gray-20);
+	padding: 1em;
+}
+footer p{
+	text-align: center;
 }
 
 .links-nextprev {
