--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -59,7 +59,10 @@
 			{{ content | safe }}
 		</main>
 
-		<footer><p>This site is made with 💖 under the <a href="https://unlicense.org/">Unlicense</a> license.</p></footer>
+		<footer>
+			<p>This site is made with 💖 under the <a href="https://unlicense.org/">Unlicense</a> license.</p>
+			<p><a href="https://github.com/notmyjunie/notmyjunie.github.io">Source code</a></p>
+		</footer>
 
 		<!-- This page `{{ page.url | htmlBaseUrl }}` was built on {% currentBuildDate %} -->
 	</body>
