--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -60,7 +60,7 @@
 		</main>
 
 		<footer>
-			<p>This site is made with 💖 under the <a href="https://unlicense.org/">Unlicense</a> license.</p>
+			<p>This site is made with 💖 under the <a href="https://github.com/notmyjunie/notmyjunie.github.io#MIT-1-ov-file">MIT</a> license.</p>
 			<p><a href="https://github.com/notmyjunie/notmyjunie.github.io">Source code</a></p>
 		</footer>
 
