--- a/public/css/index.css
+++ b/public/css/index.css
@@ -47,7 +47,7 @@ a[href].header-anchor:focus,
 	--color-gray-50: #826;
 	--color-gray-90: #425;
 
-	--background-color: #fce;
+	--background-color: #ffefff;
 
 	--text-color: var(--color-gray-90);
 	--text-color-link: #858;
