--- a/css/index.css
+++ b/css/index.css
@@ -304,3 +304,11 @@ a[href].header-anchor:hover {
 h2 + .header-anchor {
 	font-size: 1.5em;
 }
+
+.center{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 20%;
+	text-align: center;
+}
