--- a/css/index.css
+++ b/css/index.css
@@ -309,6 +309,6 @@ h2 + .header-anchor {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 30%;
+	width: 240px;
 	text-align: center;
 }
