--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -61,6 +61,7 @@
 
 		<footer>
 			<p>This site is made with 💖 under the <a href="https://github.com/notmyjunie/notmyjunie.github.io#MIT-1-ov-file">MIT</a> license.</p>
+			<p>Trans🏳️‍⚧️a rights are human rights!</p>
 			<p><a href="https://github.com/notmyjunie/notmyjunie.github.io">Source code</a></p>
 		</footer>
 
