--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -60,9 +60,9 @@
 		</main>
 
 		<footer>
-			<p>This site is made with 💖 under the <a href="https://github.com/notmyjunie/notmyjunie.github.io#MIT-1-ov-file">MIT</a> license.</p>
+			<p><a href="#">Back to top</a></p>
+			<p>This <a href="https://github.com/notmyjunie/notmyjunie.github.io">site</a> is made with 💖 under the <a href="https://github.com/notmyjunie/notmyjunie.github.io#MIT-1-ov-file">MIT license</a>.</p>
 			<p>Trans🏳️‍⚧️ rights are human rights!</p>
-			<p><a href="https://github.com/notmyjunie/notmyjunie.github.io">Source code</a></p>
 		</footer>
 
 		<!-- This page `{{ page.url | htmlBaseUrl }}` was built on {% currentBuildDate %} -->
