index.njk improved

--- a/content/index.njk
+++ b/content/index.njk
@@ -5,8 +5,8 @@ eleventyNavigation:
   order: 1
 numberOfLatestPostsToShow: 3
 ---
-<h1>Salutations, visitor!</h1>
-<p>Greetings! Welcome to my humble website. This is where I would showcase my stuff!</p>
+<h1>Welcome, visitor!</h1>
+<p>Greetings! This is my humble website. This is where I would showcase my stuff!</p>
 <p>I mainly use this site as a collection to store medium to long form essays or to express any opinions I have towards something in general.</p>
 <h6>Psssttt! Use the links on the header to navigate my website.</h6>
 
